# ai-image-video-models

./: .gitattributes  DITN_x4.pth.zst  IRCNN_Lx1_fp16.onnx  IRCNN_Lx1_fp16.onnx.zst  IRCNN_Mx1_fp16.onnx  IRCNN_Mx1_fp16.onnx.zst  LVAx2_fp16.onnx  LVAx2_fp16.onnx.zst  README.md  RealESR_Ax4_fp16.onnx  RealESR_Ax4_fp16.onnx.zst  RealESR_Gx4_fp16.onnx  RealESR_Gx4_fp16.onnx.zst  RealSRx4_Anime.pth.zst  manifest.json  pyproject.toml
.github/workflows/: ci.yml  probe.yml
assets/fluidframes/: manifest.json
assets/fluidframes/rife/RIFE/: RIFE_fp32-v2026.3.onnx.zst  manifest.json  notes.json
assets/fluidframes/rife/RIFE_Lite/: RIFE_Lite_fp32-v2026.3.onnx.zst  manifest.json  notes.json
assets/fluidframes/rife/RIFE_s/: RIFE_s_fp32-v2026.3.onnx.zst  manifest.json  notes.json
assets/qualityscaler/: manifest.json
assets/qualityscaler/onnx/BSRGANx2/: BSRGANx2_fp16-v2026.3.onnx.zst  manifest.json  notes.json
assets/qualityscaler/onnx/BSRGANx4/: BSRGANx4_fp16-v2026.3.onnx.zst  manifest.json  notes.json
assets/qualityscaler/onnx/IRCNN_Lx1/: IRCNN_Lx1_fp16-v2026.3.onnx.zst  manifest.json  notes.json
assets/qualityscaler/onnx/IRCNN_Mx1/: IRCNN_Mx1_fp16-v2026.3.onnx.zst  manifest.json  notes.json
assets/qualityscaler/onnx/LVAx2/: LVAx2_fp16-v2026.3.onnx.zst  manifest.json  notes.json
assets/qualityscaler/onnx/MSharpx4/: MSharpx4_fp16-v2026.3.onnx.zst  manifest.json  notes.json
assets/qualityscaler/onnx/RealESRGANx4/: RealESRGANx4_fp16-v2026.3.onnx.zst  manifest.json  (+1 more)
tests/: conftest.py  test_manifest_integrity.py  test_network_probe.py
tools/: gen_manifest.py
(+6 files in other folders)
